@@ -1,3 +1,7 @@
+[B]1.3.0[/B]
+- Added rarfile support thanks to ratmole
+- Cosmetics
+
 [B]1.2.5[/B]
 - Cosmetics
 
